<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.shikato.androidtestsample.TopActivity"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/num1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_gravity="center" />

    <TextView
        android:text="+"
        android:textSize="30sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_gravity="center" />

    <Button
        android:id="@+id/equal_button"
        android:text="="
        android:textSize="30sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>

